# vkMiniEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Core/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandBufferManager.cpp  CommandBufferManager.h  CommandContext.cpp  CommandContext.h  DepthBuffer.h  DescriptorSet.cpp  DescriptorSet.h  Display.cpp  Display.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  EngineProfiling.cpp  EngineProfiling.h  EngineTuning.cpp  EngineTuning.h  FileUtility.cpp  FileUtility.h  Framebuffer.cpp  Framebuffer.h  GameCore.cpp  GameCore.h  GameInput.cpp  GpuBuffer.cpp  GpuBuffer.h  GpuTimeManager.cpp  GpuTimeManager.h  GraphicsCommon.cpp  GraphicsCommon.h  GraphicsCore.cpp  (+32 more)
Core/Math/: BoundingBox.h  BoundingPlane.h  BoundingSphere.cpp  BoundingSphere.h  Common.h  Frustum.cpp  Frustum.h  Transform.h
Core/Shaders/: 4x4HorizontalUpsampleFrag.glsl  4x4UpsampleComp.glsl  4x4VerticalUpsampleFrag.glsl  BicubicFilterFunctions.glsl  BicubicHorizontalUpsampleFrag.frag  BicubicUpsampleComp.comp  BicubicUpsampleFast16Comp.comp  BicubicUpsampleFast24Comp.comp  BicubicUpsampleFast32Comp.comp  BicubicVerticalUpsampleFrag.frag  BilinearUpsampleFrag.frag  ColorSpaceUtility.glsl  CompositeSDRFrag.frag  LanczosComp.comp  LanczosFast16Comp.comp  LanczosFast24Comp.comp  LanczosFast32Comp.comp  LanczosFunctions.glsl  LanczosHorizontalFrag.frag  LanczosVerticalFrag.frag  MagnifyPixelsFrag.frag  PresentSDRFrag.frag  ScaleAndCompositeSDRFrag.frag  ScreenQuadPresentVert.vert  ShaderUtility.glsl  SharpeningUpsampleFrag.frag  TextAntialiasFrag.frag  TextShadowFrag.frag  TextVert.vert
Core/Util/: CommandLineArg.cpp  CommandLineArg.h
Model/: CMakeLists.txt  IndexOptimizePostTransform.cpp  IndexOptimizePostTransform.h  MeshConvert.cpp  MeshConvert.h  Model.cpp  Model.h  ModelConvert.cpp  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  TextureConvert.cpp  TextureConvert.h  UniformBuffers.h  glTF.cpp  glTF.h  json.hpp
Model/Shaders/: Common.glsl  CutoutDepthFrag.frag  CutoutDepthSkinVert.vert  CutoutDepthVert.vert  DefaultFrag.frag  DefaultFrag.glsl  DefaultNoTangentFrag.frag  DefaultNoTangentNoUV1Frag.frag  DefaultNoTangentNoUV1SkinVert.vert  DefaultNoTangentNoUV1Vert.vert  DefaultNoTangentSkinVert.vert  DefaultNoTangentVert.vert  DefaultNoUV1Frag.frag  DefaultNoUV1SkinVert.vert  DefaultNoUV1Vert.vert  DefaultSkinVert.vert  DefaultVert.glsl  DefaultVert.vert  DepthOnlySkinVert.vert  DepthOnlyVert.glsl  DepthOnlyVert.vert  SkyboxFrag.frag  SkyboxVert.vert
Model/Util/: MeshNormals.cpp  MeshTangentFrame.cpp  MeshUtil.cpp  TexMipMaps.cpp  VBReader.cpp  VBWriter.cpp  VulkanMesh.h  VulkanTex.h
ModelViewer/: CMakeLists.txt  ModelViewer.cpp
